<resources>
    <string name="app_name">Camunda</string>

    <!--LoginActivity-->
    <string name="user_name">User name</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>

    <!--Tasks-->
    <string name="created_time">Created time:</string>
    <string name="description">Description:</string>
    <string name="due">Due:</string>

    <!--menu-->
    <string name="logout">Logout</string>
</resources>