<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/base_margin"
        android:src="@drawable/ic_etisalat_logo"
        />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/logo"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            android:textColor="@color/darkTextPrimary"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/user_name"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorAccent"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameTextView"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text"
                android:textColor="@color/darkHintAd"
                android:background="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:drawableEnd="@drawable/ic_edit"
                android:hint="@string/enter_user_name"
                android:textColorHint="@color/darkHint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameInputLayout"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:textColor="@color/darkTextPrimary"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/password"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            app:layout_constraintTop_toBottomOf="@id/passwordTextView"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:background="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/enter_password"
                android:textColor="@color/darkHintAd"
                android:textColorHint="@color/darkHint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/ButtonSolidStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/base_large_margin"
            android:layout_marginEnd="@dimen/base_large_margin"
            android:layout_marginTop="@dimen/base_large_margin"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_medium"
            />

</androidx.constraintlayout.widget.ConstraintLayout>

