<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.jsp.camunda.utils.DateTimeUtils"/>
        <variable
            name="data"
            type="com.jsp.camunda.repository.dao.rest.response.Task" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_gray"
        android:layout_marginTop="@dimen/base_small_margin"
        android:layout_marginBottom="@dimen/base_small_margin"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        app:cardCornerRadius="4dp"
        android:elevation="2dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/base_small_margin"
            >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@{data.name}"
                android:maxLines="2"
                tools:text= "Task"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_border_small_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
                android:layout_marginTop="@dimen/base_small_margin"
                android:layout_marginEnd="@dimen/extra_small_margin"
                >

                <TextView
                    android:id="@+id/createdAtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/extra_small_margin"
                    android:text="@string/created_time"
                    android:textColor="@color/darkTextPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/createdAtTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="@dimen/base_small_margin"
                    android:paddingStart="@dimen/base_medium_margin"
                    android:paddingTop="@dimen/extra_small_margin"
                    />

                <TextView
                    android:id="@+id/createdAtTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:text="@{DateTimeUtils.getDateWithTime(data.created)}"
                    tools:text= "2019-02-10 12:00 am"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingEnd="@dimen/base_small_margin"
                    android:paddingTop="@dimen/extra_small_margin"
                    android:paddingBottom="@dimen/extra_small_margin"
                    />

                <TextView
                    android:id="@+id/dueAtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/extra_small_margin"
                    android:text="@string/due"
                    android:textColor="@color/darkTextPrimary"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/createdAtTitle"
                    app:layout_constraintStart_toStartOf="@id/createdAtTitle"
                    android:layout_marginEnd="@dimen/base_small_margin"
                    android:paddingStart="@dimen/base_medium_margin"
                    android:paddingTop="@dimen/extra_small_margin"
                    />

                <TextView
                    android:id="@+id/dueAtTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:text="@{DateTimeUtils.getDateWithTime(data.due)}"
                    tools:text= "2019-02-10 12:00 am"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/createdAtTextView"
                    android:paddingEnd="@dimen/base_small_margin"
                    android:paddingTop="@dimen/extra_small_margin"
                    android:paddingBottom="@dimen/extra_small_margin"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/extra_small_margin"
                android:layout_marginTop="@dimen/base_small_margin"
                android:paddingBottom="@dimen/base_small_margin"
                android:text="@string/description"
                android:textColor="@color/darkTextPrimary"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintStart_toEndOf="@+id/descriptionTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/base_margin"
                android:text="@{data.description}"
                tools:text= "description"
                android:paddingEnd="@dimen/base_small_margin"
                android:layout_marginTop="@dimen/base_small_margin"
                android:paddingBottom="@dimen/base_margin"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
